--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="w3-content">
             <div class="w3-twothird">
                 <h1>Goods/Services/exports</h1>
-                <h3 class="w3-padding-8"> mainly export based economy of:</h3>
+                <h3 class="w3-padding-8"> Mainly export based economy of:</h3>
                 <h3 class="w3-padding-8"> - Timber</h3>
                 <h3 class="w3-padding-8"> - Hydropower</h3>
                 <h3 class="w3-padding-8"> - Iron Ore</h3>
